 - GB Video: Increment BCPS/OCPS even in mode 3 (fixes mgba.io/i/1462)
 - GB Audio: Deschedule channel 3 when disabled (fixes mgba.io/i/1463)
 - GB Audio: Deschedule channel 1 when disabled by sweep (fixes mgba.io/i/1467)
 - GBA Memory: Fix STM/LDM to invalid VRAM
 - GB: Fix savedata initialization (fixes mgba.io/i/1473, mgba.io/i/1478)
 - GB Printer: Reset printer buffer index after printing
Other fixes:
 - Switch: Fix threading-related crash on second launch
 - Qt: Fix FPS target maxing out at 59.727 (fixes mgba.io/i/1421)
 - Core: Fix crashes if core directories aren't set
 - Qt: Cap audio buffer size to 8192 (fixes mgba.io/i/1433)
 - Core: Fix crash when exiting game with cheats loaded
 - GBA Cheats: Fix PARv3 Thumb hooks
 - mGUI: Fix crash if last loaded ROM directory disappears (fixes mgba.io/i/1466)
 - Libretro: Fix crash changing allowing opposing directions (hhromic)
 - Qt: Fix race conditions initializing GDB stub
 - GBA: Set up GPIO mapping on null and ELF ROM regions (fixes mgba.io/i/1481)
 - GBA Cheats: Fix value incrementing in CB slide codes (fixes mgba.io/i/1501)
 - Qt: Improve cheat view UX
 - GB: Fix SGB controller incrementing (fixes mgba.io/i/1104)
Misc:
 - Qt: Make mute menu option also toggle fast-forward mute (fixes mgba.io/i/1424)
 - Qt: Show error message if file failed to load

0.7.2: (2019-05-25)
Emulation fixes:
 - GB: Fix HALT when IE and IF unused bits are set (fixes mgba.io/i/1349)
 - GB Timer: Fix timing adjustments when writing to TAC (fixes mgba.io/i/1340)
 - GB Video: Fix window y changing mid-window (fixes mgba.io/i/1345)
 - GB Video: Fix more window edge cases (fixes mgba.io/i/1346)
 - GBA: Fix RTC on non-standard sized ROMs (fixes mgba.io/i/1400)
 - GBA DMA: Fix DMA0-2 lengths (fixes mgba.io/i/1344)
 - GBA Memory: Fix writing to OBJ memory in modes 3 and 5
 - GBA Memory: Prevent writing to mirrored BG VRAM (fixes mgba.io/i/743)
 - GBA Video: Fix scanline cache with scale factor change edge cases